--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.isProd ? 'E-commerce background management system' : 'dev-' %></title>
+
+    <!-- 处于产品发布模式则使用cdn这些资源 -->
+    <% if(htmlWebpackPlugin.options.isProd) { %>
+   <!-- 富文本编辑器 的样式表文件   and   nprogress 的样式表文件-->
+   <link href="https://cdn.bootcss.com/viewerjs/1.3.7/viewer.min.css" rel="stylesheet">
+   <link href="https://cdn.bootcss.com/quill/2.0.0-dev.3/quill.bubble.min.css" rel="stylesheet">
+   ​<link href="https://cdn.bootcss.com/quill/2.0.0-dev.3/quill.core.min.css" rel="stylesheet">
+   <link href="https://cdn.bootcss.com/quill/2.0.0-dev.3/quill.snow.min.css" rel="stylesheet">
+   <link href="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.min.css" rel="stylesheet">
+   <link href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.2/theme-chalk/index.css" rel="stylesheet">
+   <!-- 富文本编辑器的 js 文件 -->
+   <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+   <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.min.js"></script>
+   <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
+   <script src="https://cdn.bootcss.com/lodash.js/4.17.15/lodash.min.js"></script>
+   <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
+   <script src="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js"></script>
+   <script src="https://cdn.bootcss.com/quill/2.0.0-dev.3/quill.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/vue-quill-editor@3.0.4/dist/vue-quill-editor.js"></script>
+   <script src="https://cdn.bootcss.com/viewerjs/1.3.7/viewer.min.js"></script>
+   <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.min.js"></script>
+   <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.2/index.js"></script>
+
+   <% } %>
   </head>
   <body>
     <noscript>
